Implement basic calculator functionality with HTML, CSS, and JavaScript. Added index.html for layout, style.css for styling, and calc.js for logic.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Calculatore</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="calc.js"></script>
+	<script src="./js/calc.js"></script>
 </body>
 
 </html>
