Update icon path in index.html and add icon image file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<button id="operation" class="operator-btn" onclick="appendToDisplay('+')">+</button>
 			</div>
 			<div class="btn-row">
-				<button id="btn-icon" onclick="cleardisplay('icone')"><img src="icon.png"></button>
+				<button id="btn-icon" onclick="cleardisplay('icone')"><img src="./img/icon.png"></button>
 				<button id="btn-num0" onclick="appendToDisplay('0')">0</button>
 				<button id="btn-opera7" onclick="appendToDisplay('.')">.</button>
 				<button onclick="calc()" class="operator-btn">=</button>
